--- a/test/styles.css
+++ b/test/styles.css
@@ -1,18 +1,20 @@
-.green{
-      background-image: linear-gradient(#063e77, #6ecbe0);
-      border-radius:15px;  
-      padding: 10px;
-    }
 .panel{
-      width: 200px;
-      height: 200px;
-      text-align: center;
-    }
+    /* background-image: linear-gradient(##4d423d, #908986); */
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    border-radius: 15px;
+    padding: 10px;
+    border-style: dashed;
+    border-color: #ead816;
+}
+
 #tempC {
   font-size: 60px;
   font-weight: bold;
   color: white;
 }
+
 #location {
   color: white;
 }
