--- a/test/styles.css
+++ b/test/styles.css
@@ -1,12 +1,12 @@
-.panel{
-    /* background-image: linear-gradient(##4d423d, #908986); */
+.panel {
+    background-image: linear-gradient(#063e77, #6ecbe0);
     width: 200px;
     height: 200px;
     text-align: center;
     border-radius: 15px;
     padding: 10px;
-    border-style: dashed;
-    border-color: #ead816;
+    /* border-style: dashed;
+    border-color: #ead816; */
 }
 
 #tempC {
