--- a/test2/styles.css
+++ b/test2/styles.css
@@ -1,3 +1,12 @@
 #location, #tempC {
-	color: blue;
+	color: white;
+}
+
+.panel {
+    background-image: linear-gradient(#063e77, #6ecbe0);
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    border-radius: 15px;
+    padding: 10px;
 }
