--- a/test2/styles.css
+++ b/test2/styles.css
@@ -1,11 +1,17 @@
-#location, #tempC {
-	color: white;
+#tempC {
+  font-size: 60px;
+  font-weight: bold;
+  color: white;
+}
+
+#location {
+  color: white;
 }
 
 .panel {
     background-image: linear-gradient(#063e77, #6ecbe0);
     width: 200px;
-    height: 200px;
+    height: 150px;
     text-align: center;
     border-radius: 15px;
     padding: 10px;
