--- a/test/styles.css
+++ b/test/styles.css
@@ -1,101 +1,58 @@
-@import url(https://fonts.googleapis.com/css?family=Poiret+One);
-@import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css);
-
-$border-radius: 20px;
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+}
 
 body {
-  background-color: #A64253;
-  font-family: Poiret One;
+  font-family: 'Roboto', sans-serif;
+  overflow: hidden;
+  background: #009688;
 }
 
-.widget {
+div.widget {
+  position: relative;
+  width: 355px;
+  height: 125px;
+  margin: 150px auto;
+  background-color: #fcfdfd; /* white */
+  border-radius: 9px;
+  padding: 25px;
+  padding-right: 30px;
+  box-shadow: 0px 31px 35px -26px #080c21;
+}
+
+div.left-panel {
+}
+
+div.date {
+  font-size: 14px;
+  font-weight: bold;
+  color: rgba(0,0,0,0.5);
+}
+
+div.city {
+  font-size: 21px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-top: 5px;
+  color: rgba(0,0,0,0.7);
+}
+
+div.temp {
+  font-size: 81px;
+  color: rgba(0,0,0,0.9);
+  font-weight: 100;
+}
+
+div.panel {
+  display: inline-block;
+}
+
+div.right-panel {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  display: flex;
-  height: 300px;
-  width: 600px;
-  transform: translate(-50%, -50%);
-  flex-wrap: wrap;
-  cursor: pointer;
-  border-radius: $border-radius;
-  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
-  
-  .weatherIcon{
-    flex: 1 100%;
-    height: 60%;
-    border-top-left-radius: $border-radius;
-    border-top-right-radius: $border-radius;
-    background: #FAFAFA;
-    font-family: weathericons;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 100px;
-    
-    i{
-      padding-top: 30px;
-    }
-  }
-  
-  .weatherInfo{
-    flex: 0 0 70%;
-    height: 40%;
-    background: #080705;
-    border-bottom-left-radius: $border-radius;
-    display: flex;
-    align-items: center;
-    color: white;
-    
-    .temperature{
-      flex: 0 0 40%;
-      width: 100%;
-      font-size: 65px;
-      display: flex;
-      justify-content: space-around;
-    }
-    
-    .description{
-      flex: 0 60%;
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: 100%;
-      justify-content: center;
-      
-      .weatherCondition{
-        text-transform: uppercase;
-        font-size: 35px;
-        font-weight: 100;
-      }
-      
-      .place{
-        font-size: 15px;
-      }
-    }
-  }
-  
-  .date{
-    flex: 0 0 30%;
-    height: 40%;
-    background: #70C1B3;
-    border-bottom-right-radius: $border-radius;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    font-size: 30px;
-    font-weight: 800;
-  }
-}
-
-p{
-  position: fixed;
-  bottom: 0%;
-  right: 2%;
-  a{
-    text-decoration: none;
-    color: #E4D6A7;
-    font-size: 10px;
-  }
+  float: right;
+  top: 0;
+  margin-top: 35px;
+  padding-left: 10px;
 }
