--- a/test2/styles.css
+++ b/test2/styles.css
@@ -9,11 +9,11 @@
 }
 
 .panel {
-    background-image: linear-gradient(#063e77, #6ecbe0);
-    width: 200px;
+    background-color: #fcfdfd;
+    width: 400px;
     height: 120px;
     text-align: center;
-    border-radius: 15px;
+    border-radius: 9px;
     padding: 10px;
-    box-shadow: 0px 31px 35px -26px #080c21;
+    /* DOES NOT WORK box-shadow: 0px 31px 35px -26px #080c21; */
 }
