--- a/test2/styles.css
+++ b/test2/styles.css
@@ -1,11 +1,18 @@
-.tempC {
+div.date {
+  color: black;
+  opacity: 0.5;
+}
+
+div.location {
+  color: black;
+  opacity: 0.7;
+}
+
+div.tempC {
   font-size: 60px;
   font-weight: bold;
   color: black;
-}
-
-.location {
-  color: black;
+  opacity: 0.9;
 }
 
 .widget {
