--- a/test2/styles.css
+++ b/test2/styles.css
@@ -6,6 +6,10 @@ div.date {
 div.location {
   color: black;
   opacity: 0.7;
+  font-size: 21px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-top: 5px;
 }
 
 div.tempC {
