--- a/test2/styles.css
+++ b/test2/styles.css
@@ -26,3 +26,15 @@ div.tempC {
     border-radius: 9px;
     padding: 10px;
 }
+
+div.panel {
+  display: inline-block;
+}
+
+div.right-panel {
+  position: absolute;
+  float: right;
+  top: 0;
+  margin-top: 35px;
+  padding-left: 40px;
+}
