--- a/test2/styles.css
+++ b/test2/styles.css
@@ -33,8 +33,8 @@ div.panel {
 
 div.right-panel {
   position: absolute;
-  float: right;
+  float: left;
   top: 0;
   margin-top: 35px;
-  padding-right: 20px;
+  padding-left: 90px;
 }
