--- a/test2/styles.css
+++ b/test2/styles.css
@@ -14,9 +14,12 @@ div.location {
 
 div.tempC {
   font-size: 60px;
-  font-weight: 100;
   color: black;
   opacity: 0.9;
+}
+
+#thin {
+    font-weight: thin;
 }
 
 .widget {
