--- a/test2/styles.css
+++ b/test2/styles.css
@@ -13,7 +13,7 @@ div.location {
 }
 
 div.tempC {
-  font-size: 60px;
+  font-size: 21px;
   color: black;
   opacity: 0.9;
 }
@@ -26,7 +26,7 @@ div.tempC {
     background-color: #fcfdfd;
     width: 440px;
     height: 120px;
-    text-align: center;
+    text-align: left;
     border-radius: 9px;
     padding: 10px;
 }
