--- a/test2/styles.css
+++ b/test2/styles.css
@@ -27,6 +27,8 @@ div.widget {
     text-align: left;
     border-radius: 9px;
     padding: 10px;
+    border-style: solid;
+    border-width: medium;
 }
 
 div.panel {
