--- a/test2/styles.css
+++ b/test2/styles.css
@@ -22,6 +22,7 @@ div.tempC {
 
 div.widget {
     background-color: #fcfdfd;
+    opacity: 0.5;
     width: 440px;
     height: 120px;
     text-align: left;
