--- a/thesis/threejs-src/styles.css
+++ b/thesis/threejs-src/styles.css
@@ -1,3 +1,7 @@
+div.text {
+	font-family: 'Montserrat', sans-serif;
+}
+
 #dashboard {
   visibility: hidden; 
   background: white;
@@ -13,7 +17,7 @@
   width: 1150px;
   margin-bottom: 20px;
   border-bottom: 4px solid black;
-  white-space: nowrap; /** force the elements to stay side by side **/
+  white-space: nowrap; /** force headline-image and headline-text to stay side by side **/
   padding: 20px;
 }
 
@@ -21,10 +25,6 @@
 	height: 70px;
   width: 70px;
   vertical-align: middle
-}
-
-div.text {
-	font-family: 'Montserrat', sans-serif;
 }
 
 #headline-text{
@@ -38,4 +38,20 @@ div.text {
 #dashboard-title {
 	font-size: 40px;
 	font-weight: regular;
+  margin-top: 25px;
+  margin-left: 50px;
+}
+
+#water-cup {
+  width: 200px;
+  height: 250px;
+	margin-top: 70px;
+	margin-left: 150px;
+  margin-bottom: 70px;
+}
+
+#humidity-reading {
+	font-size: 50px;
+	font-weight: bold;
+  margin-left: 110px;
 }
