--- a/thesis/threejs-src/styles.css
+++ b/thesis/threejs-src/styles.css
@@ -2,6 +2,15 @@ div.text {
 	font-family: 'Montserrat', sans-serif;
 }
 
+/*#button {
+  border-radius: 20px; // not working
+} 
+
+.button:hover { // not working
+  background-color: red;
+  transition: 0.7s;
+} */
+
 #dashboard {
   visibility: hidden; 
   background: white;
@@ -10,7 +19,7 @@ div.text {
   border: 3px solid;
   padding: 40px;
 	border-radius: 20px;
-	opacity: 80%;
+	/* opacity: 80%; */
 }
 
 #dashboard-headline {
@@ -55,3 +64,52 @@ div.text {
 	font-weight: bold;
   margin-left: 110px;
 }
+
+#button-div {
+  visibility: hidden;
+}
+
+.button {
+  width: 350px;
+  height: 110px;
+  background: GhostWhite;
+  border: dashed 4px #9f1be5;
+  border-radius: 20px;
+  font-size: 40px;
+}
+
+/* .button {
+  visibility: hidden; */
+  /*position: relative;
+  background-color: #4CAF50;
+  border: none;
+  font-size: 28px;
+  color: #FFFFFF;
+  padding: 20px;
+  width: 200px;
+  text-align: center;
+  transition-duration: 0.4s;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer; 
+} */
+
+/* .button:after {
+  content: "";
+  background: #f1f1f1;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+
+.button:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+} */
