--- a/thesis/threejs-src/styles.css
+++ b/thesis/threejs-src/styles.css
@@ -1,5 +1,9 @@
-div.text {
+.text {
 	font-family: 'Montserrat', sans-serif;
+}
+
+.hidden {
+  display: none; /** Use display:none instead of visibility:hidden so that hidden elements do not take up space **/
 }
 
 #dashboard {
@@ -26,7 +30,7 @@ div.text {
 
 #dashboard-headline {
   width: 1150px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   border-bottom: 4px solid black;
   white-space: nowrap; /** force headline-image and headline-text to stay side by side **/
   padding: 20px;
@@ -42,12 +46,12 @@ div.text {
 	display: inline-block;
   margin-left: 10px;
   vertical-align: middle;
-	font-size: 50px;
+	font-size: 60px;
 	font-weight: bold;
 }
 
 #dashboard-title {
-	font-size: 40px;
+	font-size: 50px;
 	font-weight: regular;
   margin-top: 25px;
   margin-left: 50px;
@@ -65,6 +69,13 @@ div.text {
 	font-size: 50px;
 	font-weight: bold;
   margin-left: 110px;
+}
+
+#plant-description {
+  font-size: 40px;
+  font-weight: regular;
+  font-style: italic;
+	padding: 30px;
 }
 
 .button-group {
