--- a/thesis/threejs-src/styles.css
+++ b/thesis/threejs-src/styles.css
@@ -17,17 +17,6 @@
 	/* opacity: 80%; */
 }
 
-#dashboard-content {
-  padding-left: 20px;
-}
-
-#dashboard-top-right {
-  position: absolute;
-  top: 0;
-  margin-top: 220px;
-  padding-left: 750px;
-}
-
 #dashboard-headline {
   width: 1150px;
   margin-bottom: 30px;
@@ -42,12 +31,33 @@
   vertical-align: middle
 }
 
-#headline-text{
+#headline-text {
 	display: inline-block;
   margin-left: 10px;
   vertical-align: middle;
 	font-size: 60px;
 	font-weight: bold;
+}
+
+#dashboard-home {
+  padding-left: 20px;
+}
+
+#dashboard-home-button {
+  position: absolute;
+  top: 0;
+  margin-top: 220px;
+  padding-left: 750px;
+}
+
+.button {
+  width: 350px;
+  height: 100px;
+  background: GhostWhite;
+  border: dashed 4px #9f1be5;
+  border-radius: 20px;
+  font-size: 40px;
+  margin-bottom: 20px;
 }
 
 #dashboard-title {
@@ -78,20 +88,3 @@
 	padding: 50px;
 }
 
-.button-group {
-  position: absolute;
-  float: left;
-  top: 0;
-  padding-left: 100px;
-  margin-top: 35px;
-}
-
-.button {
-  width: 350px;
-  height: 100px;
-  background: GhostWhite;
-  border: dashed 4px #9f1be5;
-  border-radius: 20px;
-  font-size: 40px;
-  margin-bottom: 20px;
-}
