--- a/thesis/threejs-src/styles.css
+++ b/thesis/threejs-src/styles.css
@@ -141,11 +141,13 @@ form {
   background-color: #9f1be5;
   border-radius: 5px;
   color: white;
+  font-size: 20px;
 }
 
 #button-return {
   background-color: lightgray;
   border-radius: 5px;
+  font-size: 20px;
 }
 
 .watering-record {
